[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/omwekialt_logo.png" type="Texture" id=1]
[ext_resource path="res://sprites/d_daok_portada.png" type="Texture" id=2]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://sprites/mapas/d_daok_mapas_strip15.png" type="Texture" id=4]

[node name="Menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Arte" type="Sprite" parent="."]
position = Vector2( 534, 205 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Omwekiatl" type="Sprite" parent="."]
position = Vector2( 902, 475 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Creditos" type="Label" parent="."]
margin_left = 804.0
margin_top = 28.0
margin_right = 931.0
margin_bottom = 52.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Referencias a:"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
margin_left = 26.0
margin_top = 544.0
margin_right = 104.0
margin_bottom = 568.0
rect_scale = Vector2( 1.5, 1.5 )
text = "0.0.0"
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AcercaDe" type="Label" parent="."]
margin_left = 14.0
margin_top = 25.0
margin_right = 220.0
margin_bottom = 377.0
rect_scale = Vector2( 1.25, 1.25 )
text = "DAOK es un simulador de sociedades tipo city-builder creado por Omwekiatl como fan-art a varios Youtubers creadores de videojuegos.



Los personajes principales (diamantes) son de DEValen.



Se hizo en Godot y con el fin de ser educativo, su editable se halla en GitHub"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Minimapa" type="Panel" parent="."]
margin_left = 298.0
margin_top = 410.0
margin_right = 478.0
margin_bottom = 590.0
rect_scale = Vector2( 0.9, 0.9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Mapa" type="Sprite" parent="Minimapa"]
self_modulate = Color( 0.341176, 0.317647, 0.152941, 0.392157 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 4 )
centered = false
hframes = 15
__meta__ = {
"_edit_lock_": true
}

[node name="BNueva" type="Button" parent="."]
margin_left = 476.0
margin_top = 440.0
margin_right = 559.0
margin_bottom = 470.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "Nuevo"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BMapL" type="Button" parent="."]
margin_left = 476.0
margin_top = 489.0
margin_right = 514.0
margin_bottom = 519.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "-"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BMapR" type="Button" parent="."]
margin_left = 532.0
margin_top = 490.0
margin_right = 569.0
margin_bottom = 520.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "+"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BImportar" type="Button" parent="."]
margin_left = 642.0
margin_top = 484.0
margin_right = 725.0
margin_bottom = 514.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "Importar"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BExportar" type="Button" parent="."]
margin_left = 641.0
margin_top = 531.0
margin_right = 724.0
margin_bottom = 561.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "Exportar"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BAbrir" type="Button" parent="."]
margin_left = 643.0
margin_top = 438.0
margin_right = 726.0
margin_bottom = 468.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "Continuar"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="URLs" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BGodot" type="Button" parent="URLs"]
margin_left = 85.0
margin_top = 311.0
margin_right = 168.0
margin_bottom = 341.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "Godot"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BEditable" type="Button" parent="URLs"]
margin_left = 84.0
margin_top = 449.0
margin_right = 167.0
margin_bottom = 479.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "GitHub"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BOmwekiatl" type="Button" parent="URLs"]
margin_left = 88.0
margin_top = 192.0
margin_right = 171.0
margin_bottom = 222.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "Omwekiatl"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BDEValen" type="Button" parent="URLs"]
margin_left = 838.0
margin_top = 70.0
margin_right = 921.0
margin_bottom = 100.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "DEValen"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BGuinxu" type="Button" parent="URLs"]
margin_left = 841.0
margin_top = 116.0
margin_right = 924.0
margin_bottom = 146.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "Guinxu"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BJasperDev" type="Button" parent="URLs"]
margin_left = 840.0
margin_top = 162.0
margin_right = 923.0
margin_bottom = 192.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "JasperDev"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BAlvaMajo" type="Button" parent="URLs"]
margin_left = 840.0
margin_top = 209.0
margin_right = 923.0
margin_bottom = 239.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "AlvaMajo"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BSDev" type="Button" parent="URLs"]
margin_left = 843.0
margin_top = 255.0
margin_right = 926.0
margin_bottom = 285.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "S-Dev"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BJLPM" type="Button" parent="URLs"]
margin_left = 843.0
margin_top = 302.0
margin_right = 926.0
margin_bottom = 332.0
rect_scale = Vector2( 1.25, 1.25 )
focus_mode = 0
enabled_focus_mode = 0
text = "JLPM"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 277.0
margin_top = 34.0
margin_right = 808.0
margin_bottom = 394.0
popup_exclusive = true
window_title = "Guardar un Archivo"
resizable = true
dialog_hide_on_ok = true
mode_overrides_title = false
access = 2
filters = PoolStringArray( "*.save ; SAVE" )
current_dir = "/Users/ojorc/OneDrive/Documents/GMS_proyectos/Daok"
current_path = "/Users/ojorc/OneDrive/Documents/GMS_proyectos/Daok/"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="button_down" from="BNueva" to="." method="_on_BNueva_button_down"]
[connection signal="button_down" from="BMapL" to="." method="_on_BMapL_button_down"]
[connection signal="button_down" from="BMapR" to="." method="_on_BMapR_button_down"]
[connection signal="button_down" from="BImportar" to="." method="_on_BImportar_button_down"]
[connection signal="button_down" from="BExportar" to="." method="_on_BExportar_button_down"]
[connection signal="button_down" from="BAbrir" to="." method="_on_BAbrir_button_down"]
[connection signal="button_down" from="URLs/BGodot" to="." method="_on_BGodot_button_down"]
[connection signal="button_down" from="URLs/BEditable" to="." method="_on_BEditable_button_down"]
[connection signal="button_down" from="URLs/BOmwekiatl" to="." method="_on_BOmwekiatl_button_down"]
[connection signal="button_down" from="URLs/BDEValen" to="." method="_on_BDEValen_button_down"]
[connection signal="button_down" from="URLs/BGuinxu" to="." method="_on_BGuinxu_button_down"]
[connection signal="button_down" from="URLs/BJasperDev" to="." method="_on_BJasperDev_button_down"]
[connection signal="button_down" from="URLs/BAlvaMajo" to="." method="_on_BAlvaMajo_button_down"]
[connection signal="button_down" from="URLs/BSDev" to="." method="_on_BSDev_button_down"]
[connection signal="button_down" from="URLs/BJLPM" to="." method="_on_BJLPM_button_down"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
